--- a/templates/base.html
+++ b/templates/base.html
@@ -29,13 +29,16 @@
       </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <a><img src="{{ url_for('static', filename='icons/brand.png') }}" width="120px" height="60px"></a>
+
 
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
             {% if current_user.is_authenticated %}
+
             <a class="nav-link" href="{{ url_for('logout')}}">Logout</a>
-            <a class="nav-link"
-              href="{{ url_for('my_account', user_id=current_user['_id']) }}">{{ current_user.username }}</a>
+            <a class="nav-link" href="{{ url_for('my_account', user_id=current_user['_id']) }}">{{ current_user.username
+              }}</a>
             {% else %}
             <a class="nav-link" href="{{ url_for('login')}}">Login</a>
             {% endif %}
@@ -142,7 +145,7 @@
             '<button id="removeIngredient" class="removeIngredientDiv btn btn-outline-danger">-</button>' +
             '<input  id="recipe_ingredient" name="ingredients" type="text" class="form-control" placeholder="next ingredient" required autofocus>'
           );
-        
+
           newTextBoxDiv.appendTo("#TextBoxDivIngredients");
           ingredientCounter++;
         });
@@ -150,12 +153,12 @@
         $("#TextBoxesGroupIngredients").on('click', '#removeIngredient', function (event) {
           console.log(ingredientCounter);
           event.preventDefault(); // cancel default behavior 
-          
+
           if (ingredientCounter <= 1) {
             $("#removeIngredient").prop('disabled', true);
             return false;
           }
-          
+
           if (ingredientCounter <= 3) {
             $("#removeIngredient").hide();
           }
