change color, add data

--- a/templates/about.html
+++ b/templates/about.html
@@ -5,7 +5,10 @@
 
 {% block body %} 
 
-<h1>About</h1>
+<h1 style="color: orange;">About HawkRecipes</h1>
+
+<p>HawkRecipes is a online recipes website. The service primarily distrubutes recipes by HyVee. </p>
+<p>We are happy to provide you with different types of food recipes to facilitate your daily grocery shopping in HyVee! </p>
 
 
 
