--- a/templates/recipe-admin.html
+++ b/templates/recipe-admin.html
@@ -5,7 +5,7 @@
 
 {% block body %} 
 
-<h1>Recipe Admin Page</h1>
+<h1 style="color: orange;">Recipe Admin Page</h1>
 <hr>
 <div class="admin_left">
     <h3 >Food Categories</h3>
