--- a/templates/user-admin.html
+++ b/templates/user-admin.html
@@ -5,7 +5,7 @@
 
 {% block body %} 
 
-<h1>User Admin Page</h1>
+<h1 style="color: orange;">User Admin Page</h1>
 <hr>
 <div class="admin_left">
     <h3>Create an account</h3>
