--- a/templates/edit-recipe.html
+++ b/templates/edit-recipe.html
@@ -5,7 +5,7 @@
 
 {% block body %}
 
-<h3>Edit a recipe</h3>
+<h3 style="color: orange;">Edit a recipe</h3>
 <hr>
 <form method="POST" action="{{ url_for('update_recipe', recipe_id=recipe['_id']) }}">
 
