--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 
 {% block body %} 
 
-<h1>Newest Recipes</h1>
+<h1 style="color: orange;">Newest Recipes</h1>
 
 {% if all_recipes %}
 <table class="table table-hover">
