--- a/templates/my-account.html
+++ b/templates/my-account.html
@@ -5,7 +5,7 @@
 
 {% block body %} 
 
-<h3>Edit my account</h3>
+<h3 style="color: orange;">Edit my account</h3>
   <hr>
   {% if user %}
 <form method="POST" action="{{ url_for('update_myaccount', user_id=user['_id']) }}">
