--- a/templates/new-recipe.html
+++ b/templates/new-recipe.html
@@ -5,7 +5,7 @@
 
 {% block body %}
 
-<h3>Add A New Recipe</h3>
+<h3 style="color: orange;">Add A New Recipe</h3>
 <hr>
 <form id="new_recipe" method="POST" action="{{ url_for('add_recipe') }}">
 
