--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -5,7 +5,7 @@
 
 {% block body %} 
 
-<h1>Recipes Page</h1>
+<h1 style="color: orange;">Recipes Page</h1>
 
 {% if all_recipes %}
 <table class="table table-hover">
