--- a/templates/print-recipe.html
+++ b/templates/print-recipe.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} Print a Recipe {% endblock %}
+{% block title %} Print a Recipe from HawkRecipes {% endblock %}
 
 
 {% block body %}
