--- a/templates/recipe-admin.html
+++ b/templates/recipe-admin.html
@@ -1,6 +1,5 @@
 {% extends 'base.html' %}
-
-{% block title %} Recipe Administration {% endblock %}
+{% block title %} HawkRecipes Recipe Administration {% endblock %}
 
 
 {% block body %} 
