--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 
 {% extends 'base.html' %}
 
-{% block title %} My Recipes Login {% endblock %}
+{% block title %} Login to HawkRecipes {% endblock %}
 
 
 {% block body %} 
