--- a/templates/my-account.html
+++ b/templates/my-account.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} User Edit {% endblock %}
+{% block title %} My Profile on HawkRecipes {% endblock %}
 
 
 {% block body %} 
