--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} Recipes {% endblock %}
+{% block title %} HawkRecipes Recipes {% endblock %}
 
 
 {% block body %} 
