--- a/templates/user-admin.html
+++ b/templates/user-admin.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} User Administration {% endblock %}
+{% block title %} HawkRecipes User Administration {% endblock %}
 
 
 {% block body %} 
