--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} HawkRecipes - Dekicious Recipes for Everyone {% endblock %}
+{% block title %} HawkRecipes - Cooking with Ease {% endblock %}
 
 
 {% block body %} 
