added meta description

--- a/templates/about.html
+++ b/templates/about.html
@@ -4,6 +4,8 @@
 
 
 {% block body %} 
+{% block pageDescription %}
+<meta name="description" content="About HawkRecipes Web Application" /> {% endblock %}
 
 <h1 style="color: orange;">About HawkRecipes</h1>
 
