--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,10 @@
 
 {% block title %} HawkRecipes - Cooking with Ease {% endblock %}
 
+{% block pageDescription %}
+<meta name="description" content="A website of delicious recipes from Hy-vee." /> {% endblock %}
 
-{% block body %} 
+{% block body %}
 
 <h1 style="color: orange;">Newest Recipes</h1>
 
