--- a/templates/my-account.html
+++ b/templates/my-account.html
@@ -4,6 +4,8 @@
 
 
 {% block body %} 
+{% block pageDescription %}
+<meta name="description" content="Check your Account Profile of HawkRecipes." /> {% endblock %}
 
 <h3 style="color: orange;">Edit my account</h3>
   <hr>
