--- a/templates/print-recipe.html
+++ b/templates/print-recipe.html
@@ -5,6 +5,9 @@
 
 {% block body %}
 
+{% block pageDescription %}
+<meta name="description" content="Print the Recipes from HawkRecipes. " /> {% endblock %}
+
 <h3>{{ recipe['recipe_name'] }}</h3>
 <hr>
 <div class="form-group">
