--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -4,6 +4,8 @@
 
 
 {% block body %} 
+{% block pageDescription %}
+<meta name="description" content="Check Recipes from HawkRecipes. " /> {% endblock %}
 
 <h1 style="color: orange;">Recipes Page</h1>
 
