customer error pages

--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
       </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <a><img src="{{ url_for('static', filename='icons/brand.png') }}" width="120px" height="60px"></a>
+        <a><img src="{{ url_for('static', filename='icons/brand.png') }}" width="120px" height="60px" alt="brand and logo"></a>
 
 
         <ul class="navbar-nav mr-auto">
