--- a/templates/recipe-admin.html
+++ b/templates/recipe-admin.html
@@ -15,7 +15,7 @@
 
         {% for category in all_categories %}
     <p><a
-        href="{{ (url_for('delete_category', category_id=category['_id'])) }}"><img src="{{ url_for('static', filename='icons/delete.png') }}"></a>
+        href="{{ (url_for('delete_category', category_id=category['_id'])) }}"><img src="{{ url_for('static', filename='icons/delete.png') }}" alt="delete"></a>
         &nbsp;{{ category.category_name }} </p>
         {% endfor %}
         <br clear="all">
