--- a/templates/base.html
+++ b/templates/base.html
@@ -19,13 +19,13 @@
   <meta name="twitter:description" content="A website of delicious recipes from Hy-vee.">
   <meta name="twitter:creator" content="@author_handle">
   <-- Twitter Summary card images must be at least 120x120px -->
-  <meta name="twitter:image" content="http://xwu56-recipe-db.azurewebsites.net/static/brower.png">
+  <meta name="twitter:image" content="http://xwu56-recipe-db.azurewebsites.net/static/icons/brower.png">
   
   <!-- Open Graph data -->
   <meta property="og:title" content="HawkRecipes.com" />
   <meta property="og:type" content="article" />
   <meta property="og:url" content="https://xwu56-recipe-db.azurewebsites.net" />
-  <meta property="og:image" content="http://xwu56-recipe-db.azurewebsites.net/static/brower.png" />
+  <meta property="og:image" content="http://xwu56-recipe-db.azurewebsites.net/static/icons/brower.png" />
   <meta property="og:description" content="A website of delicious recipes from Hy-vee." />
   <meta property="og:site_name" content="HawkRecipes" />
 
