--- a/templates/base.html
+++ b/templates/base.html
@@ -10,22 +10,22 @@
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/stylesheet.css') }}" />
 
-  <meta name="description" content="Page description. No longer than 155 characters." />
+  <meta name="description" content="A website of delicious recipes from Hy-vee." />
 
   <!-- Twitter Card data -->
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:site" content="@publisher_handle">
-  <meta name="twitter:title" content="HawkRecipes.com">
+  <meta name="twitter:site" content="@kkrtal">
+  <meta name="twitter:title" content="Welcome to HawkRecipes">
   <meta name="twitter:description" content="A website of delicious recipes from Hy-vee.">
-  <meta name="twitter:creator" content="@author_handle">
+  <meta name="twitter:creator" content="@kkrtal">
   <-- Twitter Summary card images must be at least 120x120px -->
-  <meta name="twitter:image" content="http://xwu56-recipe-db.azurewebsites.net/static/icons/brower.png">
+  <meta name="twitter:image" content="http://xwu56-recipe-db.azurewebsites.net/static/icons/brand.png">
   
   <!-- Open Graph data -->
   <meta property="og:title" content="HawkRecipes.com" />
   <meta property="og:type" content="article" />
   <meta property="og:url" content="https://xwu56-recipe-db.azurewebsites.net" />
-  <meta property="og:image" content="http://xwu56-recipe-db.azurewebsites.net/static/icons/brower.png" />
+  <meta property="og:image" content="http://xwu56-recipe-db.azurewebsites.net/static/icons/brand.png" />
   <meta property="og:description" content="A website of delicious recipes from Hy-vee." />
   <meta property="og:site_name" content="HawkRecipes" />
 
@@ -143,6 +143,15 @@
       integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
       crossorigin="anonymous"></script>
 
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-S3497T43RW"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-S3497T43RW');
+    </script>
 
     <!-- Add & Remove Ingredients & Preparation Steps  -->
     <script>
