added global tag

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,16 +18,16 @@
   <meta name="twitter:title" content="Welcome to HawkRecipes">
   <meta name="twitter:description" content="A website of delicious recipes from Hy-vee.">
   <meta name="twitter:creator" content="@kkrtal">
-  <-- Twitter Summary card images must be at least 120x120px -->
-  <meta name="twitter:image" content="http://xwu56-recipe-db.azurewebsites.net/static/icons/brand.png">
-  
-  <!-- Open Graph data -->
-  <meta property="og:title" content="HawkRecipes.com" />
-  <meta property="og:type" content="article" />
-  <meta property="og:url" content="https://xwu56-recipe-db.azurewebsites.net" />
-  <meta property="og:image" content="http://xwu56-recipe-db.azurewebsites.net/static/icons/brand.png" />
-  <meta property="og:description" content="A website of delicious recipes from Hy-vee." />
-  <meta property="og:site_name" content="HawkRecipes" />
+
+    <meta name="twitter:image" content="https://krystalwu.me/static/icons/brand.png">
+
+    <!-- Open Graph data -->
+    <meta property="og:title" content="HawkRecipes.com" />
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="https://krystalwu.me" />
+    <meta property="og:image" content="https://krystalwu.me/static/icons/brand.png" />
+    <meta property="og:description" content="A website of delicious recipes from Hy-vee." />
+    <meta property="og:site_name" content="HawkRecipes" />
 
 </head>
 
@@ -143,14 +143,14 @@
       integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
       crossorigin="anonymous"></script>
 
-      <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-S3497T43RW"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DKWZDQS5W5"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
+      function gtag() { dataLayer.push(arguments); }
       gtag('js', new Date());
 
-      gtag('config', 'G-S3497T43RW');
+      gtag('config', 'G-DKWZDQS5W5');
     </script>
 
     <!-- Add & Remove Ingredients & Preparation Steps  -->
