--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -4,3 +4,5 @@ label.print{
 }
 
 .btn-primary{ background-color: lightblue !important; color: black !important; border: lightblue !important; }
+
+.btn-outline-success{ color: orange;}
