--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -5,4 +5,6 @@ label.print{
 
 .btn-primary{ background-color: lightblue !important; color: black !important; border: lightblue !important; }
 
-.btn-outline-success{ color: orange;}
+h1{
+  color: orange;
+}
