--- a/templates/recipe-admin.html
+++ b/templates/recipe-admin.html
@@ -9,7 +9,9 @@
 <div class="admin_left">
     <h3 >Food Categories</h3>
     <form method='POST' action="{{url_for('add_category')}}">
-        <input type="text" name="new_category" placeholder="add new category"><input type="submit" value="Submit">
+        
+        <input type="text" name="new_category" placeholder="add new category">
+        <input type="submit" value="Submit">
     </form>
     <hr>
 
